modified the the postad page and ad view

--- a/public/packages/bootstrap/css/style.css
+++ b/public/packages/bootstrap/css/style.css
@@ -134,3 +134,10 @@ a,a:hover,a:focus,a:active{
     font-size: 17px;
     font-weight: bold;
 }
+
+textarea.form-control{
+    max-height: 150px;
+    max-width: 100%;
+    resize: none;
+
+}
